--- a/.ruff.toml
+++ b/.ruff.toml
@@ -1,4 +1,4 @@
 line-length = 120
 select = ["ALL"]
 target-version = "py311"
-ignore = ["D203", "D212", "COM812", "ISC001"]
+ignore = ["D203", "D212", "COM812", "ISC001", "D100", "D101", "ANN101", "D107", "D102"]
